--- a/Agape Food Delivery Service/style.css
+++ b/Agape Food Delivery Service/style.css
@@ -1,3 +1,34 @@
+#heading{
+    color: #E6ADAD;
+    background-color: #08088A;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    width: 60%;
+    font-family: 'Roboto';
+    border-style: 1px solid;
+    border-radius: 6px;
+}
+
 table {
     width: 60%;
+    border-style: 3px solid;
+    margin-right: auto;
+    margin-left: auto;
+    border-spacing: 5px;
+    border-radius: 6px;
+    font-size: 15px;
 }
+
+#submit{
+    color: #08088A;
+    font-weight: bold;
+    background: transparent;
+    border-radius: 6px;
+}
+
+#submit:hover{
+    background-color: #CD5C5C;
+    color: #FFFFFF;
+}
+
